--- a/AvaloniaMusicConsole/Views/SideBarView.axaml
+++ b/AvaloniaMusicConsole/Views/SideBarView.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 xmlns:ctrl="using:AvaloniaMusicConsole.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="AvaloniaMusicConsole.Views.SideBarView"
 			 BorderThickness="0">
@@ -11,7 +12,13 @@
 				BorderBrush="Coral"
 				VerticalAlignment="Stretch"
 				HorizontalAlignment="Stretch">
-				<WrapPanel/>
+				<Panel>
+					<ctrl:AudioPlayer 
+						HorizontalAlignment="Center"
+						VerticalAlignment="Bottom"
+						Height="70"
+						Width="250"/>
+				</Panel>
 		</Border>
 	</Panel>
 </UserControl>
