many changes reposirory, data access, loading, IAsyncEnumerable, ObservableCollectionEx

--- a/AvaloniaMusicConsole/Views/DataTemplateView.axaml
+++ b/AvaloniaMusicConsole/Views/DataTemplateView.axaml
@@ -22,7 +22,7 @@
 					<data:ModelTemplateSelector>
 						<DataTemplate  x:Key="AlbumViewModel" DataType="vm:AlbumViewModel">
 							<ItemsControl
-								ItemsSource="{Binding Albums}">
+								ItemsSource="{Binding Albums , UpdateSourceTrigger=PropertyChanged} ">
 								<ItemsControl.ItemsPanel>
 									<ItemsPanelTemplate>
 										<WrapPanel 
